aws/CouchbaseSyncGateway/couchbase-amzn-lnx2.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Couchbase Sync Gateway on Amazon Linux 2",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "Network Configuration/Access"
                    },
                    "Parameters": [
                        "VpcName",
                        "Subnets",
                        "SSHCIDR",
                        "KeyName"
                    ]
                },
                {
                    "Label": {
                        "default": "Sync Gateway Configuration"
                    },
                    "Parameters": [
                        "SyncGatewayInstanceCount",
                        "SyncGatewayVersion",
                        "SyncGatewayInstanceType"
                    ]
                },
                {
                    "Label": {
                        "default": "Couchbase Server Configuration"
                    },
                    "Parameters": [
                        "CouchbaseClusterUrl",
                        "Username",
                        "Password",
                        "Bucket",
                        "DatabaseName"
                    ]
                }
            ],
            "ParameterLabels": {
                "SSHCIDR": {
                    "default": "Access CIDR"
                },
                "Username": {
                    "default": "Couchbase Username"
                },
                "Password": {
                    "default": "Couchbase Password"
                },
                "CouchbaseClusterUrl": {
                    "default": "Couchbase Cluster DNS or IP"
                }
            }
        }
    },
    "Mappings": {},
    "Parameters": {
        "SyncGatewayInstanceCount": {
            "Description": "Number of Couchbase Sync Gateway Nodes",
            "Type": "Number",
            "Default": 2
        },
        "SyncGatewayDiskType": {
            "Description": "Type of disk to use for the os volume",
            "Type": "String",
            "Default": "gp3",
            "AllowedValues": [
                "gp3",
                "gp2",
                "io1",
                "st1",
                "sc1"
            ]
        },
        "SyncGatewayVersion": {
            "Description": "Couchbase Sync Gateway Version",
            "Type": "String",
            "Default": "3.0.0",
            "AllowedValues": [
                "3.0.0",
                "2.8.3",
                "2.8.2",
                "2.8.0",
                "2.7.3",
                "2.7.2",
                "2.7.1",
                "2.7.0",
                "2.6.0",
                "2.5.0",
                "2.1.3",
                "2.1.2",
                "2.1.1",
                "2.1.0",
                "2.0.0",
                "2.0.2",
                "2.0.3"
            ]
        },
        "SyncGatewayInstanceType": {
            "Description": "Instance type for Couchbase Sync Gateway Nodes",
            "Type": "String",
            "Default": "m5.xlarge",
            "AllowedValues": [
                "c5n.xlarge",
                "t3.medium",
                "t3.large",
                "t3.xlarge",
                "t3.2xlarge",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m5.large",
                "m5.xlarge",
                "m5.2xlarge",
                "c4.large",
                "c4.xlarge",
                "c4.2xlarge",
                "c4.4xlarge",
                "c5.large",
                "c5.xlarge",
                "c5.2xlarge",
                "c5.4xlarge",
                "r5.large",
                "r5.xlarge",
                "r5.2xlarge",
                "r5.4xlarge",
                "r5d.xlarge",
                "r5d.2xlarge",
                "r5d.4xlarge",
                "r4.large",
                "r4.xlarge",
                "m5a.large",
                "m5a.xlarge",
                "m5a.2xlarge",
                "r5a.large",
                "r5a.xlarge",
                "i3.large",
                "i3.xlarge",
                "c5n.2xlarge",
                "c5n.4xlarge"
            ]
        },
        "CouchbaseClusterUrl": {
            "Description": "IP or DNS Name for the Couchbase Cluster",
            "Type": "String"
        },
        "Username": {
            "Description": "Username for Couchbase administrator",
            "Type": "String"
        },
        "Password": {
            "Description": "Password for Couchbase administrator",
            "Type": "String",
            "NoEcho": true
        },
        "Bucket": {
            "Description": "The couchbase bucket to use with the Sync Gateway Configuration",
            "Type": "String",
            "Default": "default"
        },
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "SSHCIDR": {
            "Description": "SSH CIDR",
            "Type": "String",
            "MinLength": 9,
            "MaxLength": 18,
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid CIDR range of the form x.x.x.x/x."
        },
        "VpcName": {
            "Type": "AWS::EC2::VPC::Id",
            "Description": "VPC Identifier"
        },
        "Subnets": {
            "Description": "Subnet List (Note:  If you select a private subnet without egress to the internet, the template will fail to deploy correctly)",
            "Type": "List<AWS::EC2::Subnet::Id>"
        }
    },
    "Resources": {
        "CouchbaseSecret": {
            "Type": "AWS::SecretsManager::Secret",
            "Properties": {
                "Name": {
                    "Fn::Join": [
                        "-",
                        [
                            "couchbase-secret",
                            {
                                "Fn::Select": [
                                    0,
                                    { "Fn::Split": ["-", {
                                        "Fn::Select": [
                                            2, { "Fn::Split": [
                                                "/", { "Ref": "AWS::StackId" }
                                            ]}
                                        ]
                                    }]}
                                ]
                            }
                            
                        ]
                    ]
                },
                "Description": "Couchbase Admin Username/Password Secret",
                "SecretString": {
                    "Fn::Join": [
                        "",
                        [
                            "{\"username\": \"",
                            {
                                "Ref": "Username"
                            },
                            "\", \"password\":\"",
                            {
                                "Ref": "Password"
                            },
                            "\"}"
                        ]
                    ]
                }
            }
        },
        "CouchbaseClusterConnectionString": {
            "Type": "AWS::SSM::Parameter",
            "Properties": {
                "Description": "The Rally point dns entry for new nodes to join the cluster with.",
                "Name": {
                    "Fn::Join": [
                        "-",
                        [
                            "couchbase-server-connection",
                            {
                                "Fn::Select": [
                                    0,
                                    { "Fn::Split": ["-", {
                                        "Fn::Select": [
                                            2, { "Fn::Split": [
                                                "/", { "Ref": "AWS::StackId" }
                                            ]}
                                        ]
                                    }]}
                                ]
                            }
                            
                        ]
                    ]
                },
                "Type": "String",
                "Value": { "Ref": "CouchbaseClusterUrl" }
            }
        },
        "SyncGatewayAutoScalingGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "LaunchTemplate": {
                    "LaunchTemplateId": {
                        "Ref": "SyncGatewayLaunchTemplate"
                    },
                    "Version": {
                        "Fn::GetAtt": [
                            "SyncGatewayLaunchTemplate",
                            "LatestVersionNumber"
                        ]
                    }
                },
                "MinSize": "1",
                "MaxSize": "25",
                "TargetGroupARNs": [
                    {
                        "Ref": "GatewayTarget4984Group"
                    },
                    {
                        "Ref": "GatewayTarget4986Group"
                    },
                    {
                        "Ref": "GatewayTarget4985Group"
                    }
                ],
                "DesiredCapacity": {
                    "Ref": "SyncGatewayInstanceCount"
                },
                "VPCZoneIdentifier": {
                    "Ref": "Subnets"
                }
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Count": {
                        "Ref": "SyncGatewayInstanceCount"
                    },
                    "Timeout": "PT15M"
                }
            },
            "DependsOn": [
                "CouchbaseSecret",
                "CouchbaseClusterConnectionString"
            ]
        },
        "SyncGatewayLaunchTemplate": {
            "Type": "AWS::EC2::LaunchTemplate",
            "Properties": {
                "LaunchTemplateData": {
                    "ImageId": {
                        "Fn::FindInMap": [
                            "CouchbaseSyncGateway",
                            {
                                "Ref": "AWS::Region"
                            },
                            "AMI"
                        ]
                    },
                    "InstanceType": {
                        "Ref": "SyncGatewayInstanceType"
                    },
                    "SecurityGroupIds": [
                        {
                            "Fn::GetAtt": [
                                "SyncGatewaySecurityGroup",
                                "GroupId"
                            ]
                        }
                    ],
                    "KeyName": {
                        "Ref": "KeyName"
                    },
                    "EbsOptimized": true,
                    "IamInstanceProfile": {
                        "Arn": {
                            "Fn::GetAtt": [
                                "CouchbaseInstanceProfile",
                                "Arn"
                            ]
                        }
                    },
                    "BlockDeviceMappings": [
                        {
                            "DeviceName": "/dev/xvda",
                            "Ebs": {
                                "VolumeType": {
                                    "Ref": "SyncGatewayDiskType"
                                },
                                "DeleteOnTermination": true
                            }
                        }
                    ],
                    "UserData": "",
                    "TagSpecifications": [
                        {
                            "ResourceType": "instance",
                            "Tags": [
                                {
                                    "Key": "couchbase:gateway:connection_param",
                                    "Value": {"Ref": "CouchbaseClusterConnectionString" }
                                },
                                {
                                    "Key": "couchbase:gateway:secret",
                                    "Value": { "Ref": "CouchbaseSecret" }
                                },
                                {
                                    "Key": "couchbase:gateway:version",
                                    "Value": { "Ref": "SyncGatewayVersion"}
                                },
                                {
                                    "Key": "couchbase:gateway:bucket",
                                    "Value": { "Ref": "Bucket" }
                                }
                            ]
                        }
                    ]
                }
            }
        },
        "GatewayLb4984Listener": {
            "Type": "AWS::ElasticLoadBalancingV2::Listener",
            "Properties": {
                "LoadBalancerArn": {
                    "Ref": "GatewayLoadBalancer"
                },
                "Port": 4984,
                "Protocol": "HTTP",
                "DefaultActions": [
                    {
                        "Type": "forward",
                        "TargetGroupArn": {
                            "Ref": "GatewayTarget4984Group"
                        },
                        "Order": 1
                    }
                ]
            }
        },
        "GatewayLb4985Listener": {
            "Type": "AWS::ElasticLoadBalancingV2::Listener",
            "Properties": {
                "LoadBalancerArn": {
                    "Ref": "GatewayLoadBalancer"
                },
                "Port": 4985,
                "Protocol": "HTTP",
                "DefaultActions": [
                    {
                        "Type": "forward",
                        "TargetGroupArn": {
                            "Ref": "GatewayTarget4985Group"
                        },
                        "Order": 1
                    }
                ]
            }
        },
        "GatewayLb4986Listener": {
            "Type": "AWS::ElasticLoadBalancingV2::Listener",
            "Properties": {
                "LoadBalancerArn": {
                    "Ref": "GatewayLoadBalancer"
                },
                "Port": 4986,
                "Protocol": "HTTP",
                "DefaultActions": [
                    {
                        "Type": "forward",
                        "TargetGroupArn": {
                            "Ref": "GatewayTarget4986Group"
                        },
                        "Order": 1
                    }
                ]
            }
        },
        "GatewayTarget4984Group": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
                "HealthCheckEnabled": true,
                "HealthCheckIntervalSeconds": 30,
                "HealthCheckPath": "/",
                "HealthCheckPort": "4984",
                "HealthCheckProtocol": "HTTP",
                "HealthCheckTimeoutSeconds": 5,
                "HealthyThresholdCount": 3,
                "Port": 4984,
                "Protocol": "HTTP",
                "TargetType": "instance",
                "Targets": [],
                "UnhealthyThresholdCount": 5,
                "VpcId": {
                    "Ref": "VpcName"
                },
                "Matcher": {
                    "HttpCode": "200-299"
                }
            }
        },
        "GatewayTarget4985Group": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
                "HealthCheckEnabled": true,
                "HealthCheckIntervalSeconds": 30,
                "HealthCheckPath": "/",
                "HealthCheckPort": "4984",
                "HealthCheckProtocol": "HTTP",
                "HealthCheckTimeoutSeconds": 5,
                "HealthyThresholdCount": 3,
                "Port": 4985,
                "Protocol": "HTTP",
                "TargetType": "instance",
                "Targets": [],
                "UnhealthyThresholdCount": 5,
                "VpcId": {
                    "Ref": "VpcName"
                },
                "Matcher": {
                    "HttpCode": "200-299"
                }
            }
        },        
        "GatewayTarget4986Group": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
                "HealthCheckEnabled": true,
                "HealthCheckIntervalSeconds": 30,
                "HealthCheckPath": "/",
                "HealthCheckPort": "4984",
                "HealthCheckProtocol": "HTTP",
                "HealthCheckTimeoutSeconds": 5,
                "HealthyThresholdCount": 3,
                "Port": 4986,
                "Protocol": "HTTP",
                "TargetType": "instance",
                "Targets": [],
                "UnhealthyThresholdCount": 5,
                "VpcId": {
                    "Ref": "VpcName"
                },
                "Matcher": {
                    "HttpCode": "200-299"
                }
            }
        },
        "GatewayLoadBalancer": {
            "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
            "Properties": {
                "IpAddressType": "ipv4",
                "LoadBalancerAttributes": [],
                "Scheme": "internet-facing",
                "Subnets": {
                    "Ref": "Subnets"
                },
                "Type": "application",
                "SecurityGroups": [
                    {
                        "Ref": "SyncGatewaySecurityGroup"
                    }
                ]
            }
        },
        "CouchbaseInstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Roles": [
                    {
                        "Ref": "CouchbaseRole"
                    }
                ]
            }
        },
        "CouchbaseRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Policies": [
                    {
                        "PolicyName": "CouchbasePolicy",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:CreateTags",
                                        "ec2:DescribeTags",
                                        "ec2:DescribeInstances",
                                        "autoscaling:DescribeAutoScalingGroups",
                                        "ssm:GetParameter"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                }
                            ]
                        }
                    },
                    {
                        "PolicyName": "CouchbaseSecretPolicy",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "secretsmanager:GetSecretValue"
                                    ],
                                    "Resource": [
                                        {
                                            "Ref": "CouchbaseSecret"
                                        }
                                    ]
                                }
                            ]
                        }
                    }
                ]
            }
        },
        "SyncGatewaySecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable SSH and Sync Gateway Ports",
                "VpcId": {
                    "Ref": "VpcName"
                },
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "Outbound Access",
                        "FromPort": 0,
                        "ToPort": 65535,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "SSH Port",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Sync Gateway Port",
                        "FromPort": 4984,
                        "ToPort": 4984,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Sync Gateway Admin Port",
                        "FromPort": 4985,
                        "ToPort": 4985,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Sync Gateway Port",
                        "FromPort": 4986,
                        "ToPort": 4986,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    }
                ]
            }
        }
    }
}
